# local-guide

./: .gitignore  .prettierrc.json  Caddyfile  Cargo.toml  Dockerfile  README.md  app.config.ts  app.json  docker-compose.yml  eslint.config.js  package-lock.json  package.json
.github/workflows/: android-apk-gradle.yaml  backend-lint.yaml  backend-tests.yaml  expo-lint.yaml  json-lint.yaml  yaml-lint.yaml
app/: _layout.tsx  add-edit.tsx  camera-modal.tsx  index.tsx  login.tsx  oauthredirect.tsx  settings.tsx
app/(tabs)/: index.tsx
app/places/: [id].tsx
backend/sql/: init.sql
backend/src/: app_state.rs  auth_service.rs  db.rs  jwt.rs  main.rs  mock_main.rs  oauth_config.rs  repository.rs  routes.rs  sql_init.rs  test_utils.rs
backend/src/repository/: auth.rs  image_store.rs  place.rs
backend/src/routes/: middleware.rs  models.rs  oauth.rs  places.rs  users.rs
components/: ActionButton.tsx  Card.tsx  PlaceListItem.tsx  PrimaryButton.tsx  google-sign-in-card.tsx  themed-view.tsx
components/main/: ActionButton.tsx  Card.tsx  DetailsCard.tsx  PlaceListItem.tsx  PrimaryButton.tsx
constants/: env.ts  global-colors.ts
contexts/: auth-context.tsx
docs/backend/: api.md  quick-start.md
hooks/: use-google-auth-session.ts
proposal/: proposal.md
scripts/backend/: cargo-test-with-postgres.sh  start-postgres.sh
store/: authSelectors.ts  authSlice.ts  index.ts  placeBackendThunks.ts  placeSelectors.ts  placeSlice.ts  placeThunks.ts
styles/: globalStyles.ts
types/: auth.ts  place.ts
utils/: jwt.ts  navigation.ts
