[package]
name = "local-guide-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
oauth2 = { version = "4.4.2", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[[bin]]
name = "local-guide-backend"
path = "backend/src/main.rs"

[dev-dependencies]
wiremock = { version = "0.6.0" }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["http1"] }
http-body-util = "0.1"
